[project]
name = "email-triage-env"
version = "1.0.0"
description = "An OpenEnv-compliant RL environment for real-world email triage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.1",
    "openai>=1.30.1",
    "requests>=2.32.3",
    "pyyaml>=6.0.1",
]

[project.urls]
Homepage = "https://huggingface.co/spaces"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.openenv]
name = "email-triage-env"
version = "1.0.0"
entrypoint = "server:app"
